# PyMandel

./: README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: deploy.yml  main.yml
docs/: conf.py  index.rst
src/pymandel/: __init__.py  __main__.py  _version.py  about_dialog.py  app.py  fractal_frame.py  howto_dialog.py  mandelbrot.py  mandelcli.py  menu_bar.py  settings_frame.py  status_frame.py  strings.py  stringsDE.py  stringsEN.py  stringsES.py  stringsFR.py
src/pymandel.egg-info/: PKG-INFO  requires.txt
